--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,25 @@
 {
 	"compilerOptions": {
+    "outDir": "./out",
+		"target": "es2019",
 		"module": "commonjs",
-		"target": "es6",
-		"outDir": "out",
-		"lib": [
-			"es6"
-		],
+		"moduleResolution": "node",
 		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+    "strict": true,
+		"lib": ["es2019"],
+		"noImplicitAny": true,
+		"suppressImplicitAnyIndexErrors": true,
+    "rootDir": "src",
+		"allowJs": true,
+    // Generate d.ts files
+    "declaration": true,
 	},
-	"exclude": [
-		"node_modules",
-		".vscode-test"
-	]
+	"include": [
+		"./src/**/*",
+    "./src/*"
+	],
+  "outDir": "./out",
+  "exclude": ["node_modules", ".vscode-test"]
 }
